[B] Fix alignment regression in library header
Issue #2304

--- a/client/src/theme/styles/components/global/header/_user-nav.scss
+++ b/client/src/theme/styles/components/global/header/_user-nav.scss
@@ -4,8 +4,6 @@
 .user-nav {
   --button-color: #{$neutral70};
 
-  height: 100%;
-
   &--dark {
     --button-color: #{$accentPrimary};
   }
